STYLE: On mobile the shopping bag now changes to the correct colour if there is a grand_total. This matches with the desktop and tablet screen sizes.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -350,6 +350,10 @@ footer li:hover {
     .nav-link {
         color: #000 !important;
     }
+
+    .text-bag {
+        color: #A52A2A !important;
+    }
 }
 
 @media (min-width: 992px) {
